@@ -7,13 +7,16 @@
 
     using AjLanguage.Commands;
     using AjLanguage.Expressions;
+    using AjLanguage.Language;
 
     public class PrintSubroutine : ICallable
     {
         public object Invoke(BindingEnvironment environemnt, object[] arguments)
         {
+            Machine machine = Machine.Current;
+
             foreach (object argument in arguments)
-                Console.Write(argument.ToString());
+                machine.Out.Write(argument.ToString());
 
             return null;
         }
